Added exp setup

--- a/Noisy features.ipynb
+++ b/Noisy features.ipynb
@@ -566,7 +566,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from completeRun import cv_featurePre\n",
+    "from preamble import *\n",
+    "from LocalDatasets import saveDict,readDict,ScoresFromPredictions,read_features, read_duration,checkForExist\n",
+    "list_of_files = []\n",
+    "for (dirpath, dirnames, filenames) in os.walk('C:\\\\Users\\\\S127788\\\\Documents\\\\GitHub\\\\assignment2\\did'):\n",
+    "    for filename in filenames:\n",
+    "        if filename.endswith('cat.csv'): \n",
+    "            list_of_files.append(int(filename[:-7]))\n",
+    "didList = []\n",
+    "for i in list_of_files:\n",
+    "    if readDict(i)['NumberOfSymbolicFeatures'] == readDict(i)['NumberOfFeatures']:\n",
+    "        didList.append(i)\n",
+    "didList = didList\n",
+    "cv = 10\n",
+    "amountList = [0.5,0.6,0.7,0.75,0.8,0.9,1,2,3,4,5,6]\n",
+    "NonCat = [1038,1043,1046,1049,1050,1063,1067,1068,1120,1176,11,12,1459,1462,1464,1466,1467,1468,1475,1476,1478,1479,1485,1487]\n",
+    "second = [1489, 1491, 1492, 1493, 1494, 1497, 14, 1501, 1504, 1510, 1515, 1570, 16, 18, 22, 28, 300, 30, 32, 36, 375, 37, 39,40499,40509,40, 4134, 41, 44, 4538, 458, 53, 54]\n",
+    "for i in second:\n",
+    "    NonCat.append(i)\n",
+    "didList = NOn\n",
+    "for amount in amountList:\n",
+    "    for did in didList:\n",
+    "        if readDict(did)['NumberOfInstances'] < 1000000 and readDict(did)['NumberOfInstances'] > 200:\n",
+    "            cv_featurePre(did,cv,amount)\n",
+    "            print(did,amount)"
+   ]
   }
  ],
  "metadata": {
