--- a/FeatureReduction.ipynb
+++ b/FeatureReduction.ipynb
@@ -1379,7 +1379,7 @@
     "    item.set_fontsize(22)\n",
     "ax.legend( prop={'size': 22})\n",
     "plt.show()\n",
-    "print('feature random')"
+    "print('instances')"
    ]
   },
   {
