Add noise slope

--- a/MetaFeatures.ipynb
+++ b/MetaFeatures.ipynb
@@ -1925,6 +1925,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "task = tasks.get_task(60)\n",
+    "data = task.get_dataset()\n",
+    "X, y, categorical = data.get_data(target = data.default_target_attribute, return_categorical_indicator = True)\n",
+    "\n",
+    "# We want to do cross-validation for some landmarkers, so we take a cv-10 fold.\n",
+    "# We need to unroll the generator into a list because it is iterated over multiple times.\n",
+    "folds = list(next(task.iterate_repeats()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1+1\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
