--- a/Added random features tables.ipynb
+++ b/Added random features tables.ipynb
@@ -251,7 +251,7 @@
     "for i,item in enumerate(stds):\n",
     "    diffI.append([])\n",
     "    for k,itemz in enumerate(stds[i]):\n",
-    "        diffI[i].append(90*np.array(stds[i][k]).std())"
+    "        diffI[i].append(100*np.array(stds[i][k]).std())"
    ]
   },
   {
@@ -508,7 +508,7 @@
     "for i,item in enumerate(stds):\n",
     "    diffF.append([])\n",
     "    for k,itemz in enumerate(stds[i]):\n",
-    "        diffF[i].append(90*np.array(stds[i][k]).std())"
+    "        diffF[i].append(100*np.array(stds[i][k]).std())"
    ]
   },
   {
@@ -725,7 +725,7 @@
     "for i,item in enumerate(stds):\n",
     "    diffA.append([])\n",
     "    for k,itemz in enumerate(stds[i]):\n",
-    "        diffA[i].append(90*np.array(stds[i][k]).std())"
+    "        diffA[i].append(100*np.array(stds[i][k]).std())"
    ]
   },
   {
@@ -1695,6 +1695,136 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Three types of feature addition\n",
+    "func = 'cvScoreFeatures6Laptop'\n",
+    "func2 = 'cvScoreFeatures5Duration'\n",
+    "func3 = 'cvScoreFeatures4Duration'\n",
+    "clfName = clfNames[0]\n",
+    "amountList = [1.0]\n",
+    "funcMan = DoneFeatureMan(func,clfName,amountList)\n",
+    "func2Man = DoneFeatureMan(func2,clfName,amountList)\n",
+    "func3Man = DoneFeatureMan(func3,clfName,amountList)\n",
+    "intersect = []\n",
+    "for did in funcMan:\n",
+    "    if did in func2Man:\n",
+    "        if did in func3Man:\n",
+    "            intersect.append(did)\n",
+    "didList = []\n",
+    "for did in intersect:\n",
+    "    if did in NonCat:\n",
+    "        didList.append(did)\n",
+    "scores = []\n",
+    "scores2 = []\n",
+    "scores3 = []\n",
+    "amountList = [1]\n",
+    "for i,did in enumerate(didList):\n",
+    "    scores.append([])\n",
+    "    scores2.append([])\n",
+    "    scores3.append([])\n",
+    "    for clfName in clfNames:\n",
+    "        score1T = []\n",
+    "        score2T = []\n",
+    "        score3T = []\n",
+    "        for amount in amountList:\n",
+    "            if not checkForExist(func,clfName,did,round(amount*(readDict(did)['NumberOfFeatures']-1))) or not checkForExist(func2,clfName,did,round(amount*(readDict(did)['NumberOfFeatures']-1))):\n",
+    "                print(func,clfName,amount,did)\n",
+    "            if did in Cat:\n",
+    "                score3T.append(read_features('cvScoreFeatures4Fixed',clfName,did,round(amount*(readDict(did)['NumberOfFeatures']-1))))\n",
+    "            else:\n",
+    "                score3T.append(read_features(func3,clfName,did,round(amount*(readDict(did)['NumberOfFeatures']-1))))\n",
+    "            score1T.append(read_features(func,clfName,did,round(amount*(readDict(did)['NumberOfFeatures']-1))))\n",
+    "            score2T.append(read_features(func2,clfName,did,round(amount*(readDict(did)['NumberOfFeatures']-1))))\n",
+    "            \n",
+    "        scores[i].append(score1T)\n",
+    "        scores2[i].append(score2T)\n",
+    "        scores3[i].append(score3T)\n",
+    "scoreGD2 = []\n",
+    "scoreGID3 = []\n",
+    "scoreGR4 = []\n",
+    "ratio = []\n",
+    "for i in clfNames:\n",
+    "    scoreGD2.append([[] for i in range(len(amountList)+1)])\n",
+    "    scoreGID3.append([[] for i in range(len(amountList)+1)])\n",
+    "    scoreGR4.append([[] for i in range(len(amountList)+1)])\n",
+    "    ratio.append([])\n",
+    "MaxClass = []\n",
+    "for k,x in enumerate(scores):\n",
+    "    for j in range(0,len(x)):    \n",
+    "        for i in range(0,len(x[j])):\n",
+    "            scoreGD2[j][0].append(scores[k][j][i][0])\n",
+    "            scoreGD2[j][i+1].append(scores[k][j][i][1])\n",
+    "            scoreGID3[j][0].append(scores2[k][j][i][0])\n",
+    "            scoreGID3[j][i+1].append(scores2[k][j][i][1])\n",
+    "            scoreGR4[j][0].append(scores3[k][j][i][0])\n",
+    "            scoreGR4[j][i+1].append(scores3[k][j][i][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lossA = []\n",
+    "for k,temp in enumerate([scoreGR4]):\n",
+    "    lossA.append([])\n",
+    "    for i,item in enumerate(temp):\n",
+    "        lossA[k].append(100*(sum(temp[i][0])/len(temp[i][0])-sum(temp[i][1])/len(temp[i][1])))\n",
+    "argA = []\n",
+    "for i,clfName in enumerate(clfNames):\n",
+    "    argA.append([])\n",
+    "    for k, item in enumerate(lossA):\n",
+    "        argA[i].append(item[i])\n",
+    "stds = []\n",
+    "for i,item in enumerate(clfNames):\n",
+    "    stds.append([])\n",
+    "    for k in range(1):\n",
+    "        stds[i].append([])\n",
+    "for k,temp in enumerate([scoreGR4]):\n",
+    "    for i,item in enumerate(temp):#clf\n",
+    "        for j,itemz in enumerate(temp[i][0]):\n",
+    "            stds[i][k].append(temp[i][0][j]-temp[i][1][j])\n",
+    "diffA = []\n",
+    "for i,item in enumerate(stds):\n",
+    "    diffA.append([])\n",
+    "    for k,itemz in enumerate(stds[i]):\n",
+    "        diffA[i].append(100*np.array(stds[i][k]).std())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[4.5183141183025866],\n",
+       " [16.297624041821148],\n",
+       " [17.478585627746476],\n",
+       " [5.9830165750612236],\n",
+       " [1.7571283314364312],\n",
+       " [5.6911555288015894],\n",
+       " [0.30176100443629439],\n",
+       " [1.6396552481459488],\n",
+       " [2.9344584322538441]]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diffA"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1717,7 +1847,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
